Fixed jumping of the 'line-clamped' div when margin-collapse is used

--- a/web/css/abstracts/mixins/_typography.less
+++ b/web/css/abstracts/mixins/_typography.less
@@ -73,7 +73,7 @@
     &.expanded {
         display: block;
         -webkit-line-clamp: initial !important;
-        overflow: visible;
+        overflow: auto;
         max-height: none;
     }
     > :first-child {
